--- a/src/BrakePedal/BrakePedal.csproj
+++ b/src/BrakePedal/BrakePedal.csproj
@@ -3,8 +3,10 @@
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;net6;net7</TargetFrameworks>
         <PackageVersion>2.0.0</PackageVersion>
-		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-	</PropertyGroup>
+        <AssemblyVersion>2.0.0</AssemblyVersion>
+        <FileVersion>2.0.0</FileVersion>
+        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    </PropertyGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
         <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="6.0.0" />
